# nn

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Makefile  database.db  diesel.toml  docker-compose.yml  flake.nix  spec.txt
frontend/: eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AppNav.vue
frontend/src/router/: index.ts
frontend/src/stores/: credentials.ts  hosts.ts  networks.ts  notes.ts  services.ts  sites.ts  tags.ts
frontend/src/views/: AddressesView.vue  CredentialsView.vue  HostDetailView.vue  HostsView.vue  NetworksView.vue  NotesView.vue  ServicesView.vue  SitesView.vue  TagsView.vue
migrations/2026-03-19-143530-0000_create_services/: down.sql  up.sql
migrations/postgres/2026-03-19-200000-0000_initial/: down.sql  up.sql
migrations/sqlite/2026-03-19-200000-0000_initial/: down.sql  up.sql
scripts/: pg-dev.sh
src/: cred_cmd.rs  delete_cmd.rs  import_cmd.rs  list_cmd.rs  main.rs  models.rs  netrange.rs  nmap_xml.rs  note_cmd.rs  schema.rs  tag_cmd.rs
src/api_serve/: db.rs  mod.rs
src/api_serve/handlers/: hosts_addresses.rs  mod.rs  services_creds.rs  sites_tags.rs
test/: home.xml
